[gd_scene load_steps=5 format=3 uid="uid://r208f7fwxkjs"]

[ext_resource type="Script" path="res://scripts/weapons/waterballoon.gd" id="1_ni433"]
[ext_resource type="AudioStream" uid="uid://dg2xkniebcf33" path="res://audio/sounds/waterballoon_burst.wav" id="2_iowgf"]

[sub_resource type="CapsuleShape3D" id="1"]
radius = 0.15
height = 0.4

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qywrm"]
transparency = 1
albedo_color = Color(0.219608, 0.647059, 0.964706, 0.937255)
roughness = 0.4

[node name="WaterBalloon" type="RigidBody3D"]
script = ExtResource("1_ni433")

[node name="Collider" type="CollisionShape3D" parent="."]
shape = SubResource("1")

[node name="Shape" type="CSGSphere3D" parent="."]
transform = Transform3D(0.8, 0, 0, 0, 1, 0, 0, 0, 0.9, 0, 0, 0)
radius = 0.15
material = SubResource("StandardMaterial3D_qywrm")

[node name="SoundFX" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_iowgf")
volume_db = 20.0

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="finished" from="SoundFX" to="." method="_on_sound_fx_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
